--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ MAIN CONTENT
   background-position: center center;
 }
 
-#map.explore {
+#map.home {
   background-image: url(../img/map-explore.png);
 }
 
@@ -403,13 +403,16 @@ MAIN CONTENT
 #infoButton {
   width: 100%;
   background: rgba(255,255,255,.8);
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  height: 121px;
 }
 
 #infoButton .inner {
   padding: 20px;
+}
+
+#infoButton p {
+  margin: 0;
+  line-height: 30px;
 }
 
 #infoButton button {
@@ -737,13 +740,24 @@ RESPONSIVE FIXES - LARGE DEVICES AND DESKTOP
     float: left;
     width: 30%;
     height: 100%;
-    overflow: scroll;
     background: #fafafa;
     box-shadow: -3px 0 10px rgba(0,0,0,.1);
   }
 
+  #info-layer .inner {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+  }
+
   #info-content {
-    padding: 20px;
+    padding: 20px 20px 121px 20px;
+  }
+
+  #infoButton {
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 
 }
