--- a/css/style.css
+++ b/css/style.css
@@ -610,8 +610,12 @@ RESPONSIVE FIXES - EXTRA SMALL DEVICES
     z-index: 9998;
   }
 
-  #logo {
+  #topBar span {
     display: none;
+  }
+
+  #topBar ul li {
+    padding: 0 15px 0 10px;
   }
 
   .device-big {
